chore: update build.sbt for JavaFX 21 and automatic OS detection
- Replaced fixed Windows classifier with OS-specific detection (win/mac/linux)
- Added resource copy enforcement to ensure FXML/CSS are available
- Enabled proper JavaFX module-path and --add-modules for JavaFX 21
- Updated project language from Java 8 to Java 21